--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "fs-extra": "^10.0.0",
     "lodash.set": "^4.3.2",
     "mime-types": "^2.1.27",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
-    "strapi-plugin-populate-deep": "^0.1.2"
+    "strapi-plugin-populate-deep": "^0.1.2",
+    "strapi-plugin-rest-cache": "^4.2.4",
+    "strapi-provider-rest-cache-memory": "^4.2.4"
   },
   "name": "my-app-name",
   "private": true,
